refactor Add jvmArgs for writing unit test.