@@ -99,6 +99,7 @@ allprojects {
         useJUnitPlatform()
         jvmArgs(
             "--add-opens", "java.base/java.nio.file=ALL-UNNAMED",
+            "--add-opens", "java.base/java.time=ALL-UNNAMED",
             "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
         )
     }
